fix: v-menu z-index

--- a/packages/vueland/src/components/VNavigation/VNavigation.scss
+++ b/packages/vueland/src/components/VNavigation/VNavigation.scss
@@ -8,7 +8,6 @@
   overflow-x: hidden;
   max-width: 100%;
   transition: .3s width $primary-transition;
-  z-index: 7;
 
   &--base {
     background-color: var(--base);
@@ -16,5 +15,9 @@
 
   &--fixed {
     position: fixed;
+  }
+
+  &--absolute {
+    position: absolute;
   }
 }
