--- a/packages/vueland/src/components/VToolbar/VToolbar.scss
+++ b/packages/vueland/src/components/VToolbar/VToolbar.scss
@@ -5,7 +5,6 @@ $toolbar-items-min-width: 60px;
 .v-toolbar {
   display: flex;
   width: 100%;
-  z-index: 8;
 
   &--base {
     background-color: var(--base);
